# TsUnityWebGLLib

./: README.md
Assets/Examples/01_JsCallCs/: JsCallCs.unity
Assets/Examples/02_Require/: Require.unity
Assets/Examples/03_Callback/: Callback.unity
Assets/Examples/04_JsBehaviour/: JsBehaviour.cs  RotateCube.unity
Assets/Examples/04_JsBehaviour/Resources/: rotate.js.txt
Assets/Examples/05_Typescript/: SomeClasses.cs  TsQuickStart.unity
Assets/Examples/06_UIEvent/: UIEvent.cs
Assets/Examples/07_JsObjectAccess/: JsObjectAccess.unity
Assets/Examples/08_TypedValue/: TypedValue.unity
Assets/Examples/09_ECSTest/: ECSTest.cs  ECSTest.unity
Assets/Examples/10_GTECSTest/: ECSTest.unity
Assets/Puerts1/Src/: PuertsDLL.cs
Assets/Scene/: Webgl.unity
Assets/Scripts/: GTJSBehaviour.cs  GTJSLoader.cs  GTJSManager.cs  GTJSManagerInstance.cs  WebGLTest.cs
Assets/puerts/: puerts.asmdef  puerts.asset  puerts.cs  puertsExample.cs
Assets/puerts/NativeSource~/CMake/: CMakeLists.txt
Assets/puerts/NativeSource~/Source/Inc/: JSEngine.h
Assets/puerts/Plugins/WebGL/: puerts.bc
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
